objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Estimated_HPD__c</fullName>
        <formula>IF(Account.HPD_TTM__c != 0, Account.HPD_TTM__c,
IF(Account.Three_Month_Average_HPD__c != 0, Account.Three_Month_Average_HPD__c, Account.Estimated_HPD__c)
)

/*
IF(Account.Most_Recent_Hold_Per_Day__c !=null,Account.Most_Recent_Hold_Per_Day__r.HPD__c,Account.Estimated_HPD__c)
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated HPD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Revenue_Weighted__c</fullName>
        <formula>Estimated_Annual_Revenue__c * Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Terminal Operator&apos;s share of Annual NTI x Probability of Opportunity</inlineHelpText>
        <label>Estimated Revenue - Weighted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Start_Date__c</fullName>
        <label>Estimated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_State_Liquor_License_Issued__c</fullName>
        <label>Estimated State Liquor License Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Example_of_Gaming_Build_Out_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Example of Gaming Build-Out Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executed_Addendum_Returned_Date__c</fullName>
        <label>Executed Addendum Returned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executive_Approval_Delay__c</fullName>
        <label>Executive Approval Delay</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor TUA</fullName>
                </value>
                <value>
                    <fullName>Competitor Go-Live</fullName>
                </value>
                <value>
                    <fullName>Compliance Speculative</fullName>
                </value>
                <value>
                    <fullName>Counsel Review</fullName>
                </value>
                <value>
                    <fullName>Termination Notice</fullName>
                </value>
                <value>
                    <fullName>Opportunity Details</fullName>
                </value>
                <value>
                    <fullName>Pictures</fullName>
                </value>
                <value>
                    <fullName>Contact Info</fullName>
                </value>
                <value>
                    <fullName>Business Hours</fullName>
                </value>
                <value>
                    <fullName>Location Assessment</fullName>
                </value>
                <value>
                    <fullName>Second Vetting</fullName>
                </value>
                <value>
                    <fullName>Revised TUA</fullName>
                </value>
                <value>
                    <fullName>SOS: Not in Good Standing</fullName>
                </value>
                <value>
                    <fullName>Assets transferred to New Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executive_Approval_Duration__c</fullName>
        <formula>IF( 
AND(ISPICKVAL(StageName,&apos;Executive Approval&apos;), ISNULL(Close_Start__c)), 
TODAY() - Executive_Approval_Start__c, Close_Start__c -  Executive_Approval_Start__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Executive Approval Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Executive_Approval_Notes__c</fullName>
        <label>Executive Approval Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Executive_Approval_Start__c</fullName>
        <label>Executive Approval Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Existing_Proposed__c</fullName>
        <label>Existing/Proposed GamingArea Segregation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Half Wall</fullName>
                </value>
                <value>
                    <fullName>Separate Room</fullName>
                </value>
                <value>
                    <fullName>Stanchions</fullName>
                </value>
                <value>
                    <fullName>None (open area)</fullName>
                </value>
                <value>
                    <fullName>Temporary Partition Wall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fee_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fee Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Assessment</label>
        <referenceTo>Field_Assessment__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gaming_Dynamics__c</fullName>
        <inlineHelpText>Use data group&apos;s gaming report to describe surrounding area gaming dynamics</inlineHelpText>
        <label>Gaming Dynamics</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gaming_Experience__c</fullName>
        <label>Gaming Experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gaming_Experience</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gaming_Status__c</fullName>
        <label>Gaming Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Organic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Surroundings__c</fullName>
        <label>General Surroundings</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cornfield</fullName>
                </value>
                <value>
                    <fullName>Gas Station</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Mall</fullName>
                </value>
                <value>
                    <fullName>Residential Housing</fullName>
                </value>
                <value>
                    <fullName>Event Hall</fullName>
                </value>
                <value>
                    <fullName>Church</fullName>
                </value>
                <value>
                    <fullName>Commercial/Industrial Park</fullName>
                </value>
                <value>
                    <fullName>Train Station</fullName>
                </value>
                <value>
                    <fullName>Airport</fullName>
                </value>
                <value>
                    <fullName>Ongoing Road Construction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Go_Live_Expected_Date__c</fullName>
        <label>Go Live Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HPD_TTM__c</fullName>
        <description>Account =&gt; Hold Per Day Total =&gt; HPD TTM Avg</description>
        <formula>Account.Hold_Per_Day_Total__r.HPD_TTM_Avg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Trailing Twelve Month) Rolls up TTM of HPD Revenue for an Account.
(TTM / Total VGT Count) / 365</inlineHelpText>
        <label>Location TTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Has_Liquor_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Liquor License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_the_ownership_changed__c</fullName>
        <label>Has the ownership changed?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Homework_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Homework Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_of_Operation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hours of Operation</label>
        <referenceTo>OperatingHours</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>How_many_VGTs_can_you_set__c</fullName>
        <label>How many VGTs can you set?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_many_VGTs_do_you_recommend_setting__c</fullName>
        <label>How many VGTs do you recommend setting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_much_investment_capital_spend__c</fullName>
        <description>how much investment capital will they spend on the location</description>
        <inlineHelpText>how much investment capital will they spend on the location</inlineHelpText>
        <label>How much investment capital spend</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGB_Application_Status__c</fullName>
        <label>IGB Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Placeholder Value 1</fullName>
                </value>
                <value>
                    <fullName>Placeholder Value 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IP_Dialup__c</fullName>
        <label>IP or Dial-up</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IP</fullName>
                </value>
                <value>
                    <fullName>Dial-up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IP_or_Dial_Up__c</fullName>
        <label>IP or Dial-Up</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IP</fullName>
                </value>
                <value>
                    <fullName>Dial-Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internet_Ready__c</fullName>
        <label>Internet Ready</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Paid_By_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Paid By Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_for_Digital_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice for Digital Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_there_a_dedicated_gaming_area__c</fullName>
        <label>Is there a dedicated gaming area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_this_model_a_change_from_past_model__c</fullName>
        <label>Is this model a change from past model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOI_Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LOI Submitted By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (LOI Submitted By)</relationshipLabel>
        <relationshipName>Opportunities8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Event_Date__c</fullName>
        <label>Last Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Event_Description__c</fullName>
        <label>Last Event Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Event_Subject__c</fullName>
        <label>Last Event Subject</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Event_Type__c</fullName>
        <label>Last Event Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_date_to_send_second_term_notice__c</fullName>
        <label>Latest date to send second term notice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_date_to_send_term_notice__c</fullName>
        <label>Latest date to send term notice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Gen_Type__c</fullName>
        <label>Lead Gen Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Gen_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Issued_or_Denied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>License Issued or Denied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link_to_Presentation__c</fullName>
        <label>Link to Presentation</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Liquor_License_Obtained__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Liquor License Obtained</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Liquor_License_Pouring_Hours__c</fullName>
        <label>Liquor License Pouring Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Liquor_License_Pouring__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Liquor License Pouring Hours</label>
        <referenceTo>OperatingHours</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_Liquor_License_Progress__c</fullName>
        <label>Local Liquor License Progress</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>App Not Submitted</fullName>
                </value>
                <value>
                    <fullName>App Submitted</fullName>
                </value>
                <value>
                    <fullName>Letter Submitted to City Clerk</fullName>
                </value>
                <value>
                    <fullName>License Approved</fullName>
                </value>
                <value>
                    <fullName>License Denied</fullName>
                </value>
                <value>
                    <fullName>License Unavailable</fullName>
                </value>
                <value>
                    <fullName>Municipal Restriction</fullName>
                </value>
                <value>
                    <fullName>Waiting on Board Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Assessment_Duration__c</fullName>
        <formula>IF(
AND(ISPICKVAL(StageName,&apos;Location Assessment&apos;), ISNULL(Custom_Presentation_Start__c)),
TODAY() - DATEVALUE(CreatedDate), Custom_Presentation_Start__c - Location_Assessment_Start__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Assessment Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Assessment_Start__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Assessment Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_Status_actual__c</fullName>
        <label>Location Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Location_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing__c</fullName>
        <label>Marketing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Banner</fullName>
                </value>
                <value>
                    <fullName>Feather Flag</fullName>
                </value>
                <value>
                    <fullName>A-frame</fullName>
                </value>
                <value>
                    <fullName>Window Decal</fullName>
                </value>
                <value>
                    <fullName>Table Tent</fullName>
                </value>
                <value>
                    <fullName>Back in 5 Minutes Cards</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_with_Decision_Maker_Completed__c</fullName>
        <label>Meeting with Decision Maker Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_with_Decision_Maker_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Meeting with Decision Maker Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merchant_Application_Rcvd_from_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merchant Application Rcvd from Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merchant_Application_for_Credit_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merchant Application for Credit Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merchant_Solutions_Approval_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merchant Solutions Approval Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merchant_Solutions_Approved_Date__c</fullName>
        <label>Merchant Solutions Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mock_Up_Options__c</fullName>
        <inlineHelpText>Field must be filled out via the &quot;Submit Custom Presentation Request&quot; action</inlineHelpText>
        <label>Presentation Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate Presentation</fullName>
                </value>
                <value>
                    <fullName>To Obtain a Liquor License</fullName>
                </value>
                <value>
                    <fullName>Sketch Up Animation Only</fullName>
                </value>
                <value>
                    <fullName>VGT Proposal Only</fullName>
                </value>
                <value>
                    <fullName>Sketch Up Animation &amp; VGT Proposal</fullName>
                </value>
                <value>
                    <fullName>A-frame</fullName>
                    <isActive>false</isActive>
                    <label>A-frame</label>
                </value>
                <value>
                    <fullName>Back in 5 Minutes Cards</fullName>
                    <isActive>false</isActive>
                    <label>Back in 5 Minutes Cards</label>
                </value>
                <value>
                    <fullName>Banner</fullName>
                    <isActive>false</isActive>
                    <label>Banner</label>
                </value>
                <value>
                    <fullName>Feather Flag</fullName>
                    <isActive>false</isActive>
                    <label>Feather Flag</label>
                </value>
                <value>
                    <fullName>Game Room Design</fullName>
                    <isActive>false</isActive>
                    <label>Game Room Design</label>
                </value>
                <value>
                    <fullName>Location Design</fullName>
                    <isActive>false</isActive>
                    <label>Location Design</label>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Table Tent</fullName>
                    <isActive>false</isActive>
                    <label>Table Tent</label>
                </value>
                <value>
                    <fullName>Window Decal</fullName>
                    <isActive>false</isActive>
                    <label>Window Decal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Municipality_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Municipality Lookup</label>
        <referenceTo>Municipality__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Municipality_TTM__c</fullName>
        <formula>Account.MunicipalityLookup__r.Hold_Per_Day_Total__r.HPD_Municipality_TTM_NTI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Municipality TTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Municipality__c</fullName>
        <formula>Account.MunicipalityLookup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Municipality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nbr_of_Accel_locations_in_municipality__c</fullName>
        <description>Pulls from the Municipality associated with the Account</description>
        <formula>Account.MunicipalityLookup__r.Nbr_of_Accel_locations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls from the Municipality associated with the Account (location) of type Accel Account.</inlineHelpText>
        <label>Num of Accel Locations in Municipality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Negotiation_Duration__c</fullName>
        <formula>IF( 
AND(ISPICKVAL(StageName,&apos;Negotiation&apos;), ISNULL(Executive_Approval_Start__c)), 
TODAY() - Negotiation_Start_Date__c, Executive_Approval_Start__c - Negotiation_Start_Date__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Negotiation Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Negotiation_Start_Date__c</fullName>
        <label>Negotiation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_TUA_Length__c</fullName>
        <label>New TUA Length</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <inlineHelpText>What is the next step?</inlineHelpText>
        <label>Next Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Current_VGTs__c</fullName>
        <label>Number of Current VGTs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_POS_Terminals__c</fullName>
        <label>Number of POS Terminals</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Parking_Spaces__c</fullName>
        <label>Number of Parking Spaces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Products_Requested__c</fullName>
        <inlineHelpText>Please provide the number of products requested for applicable Opportunity Type. For Gaming Machines, only include number of cabinets (no gaming area assets).</inlineHelpText>
        <label>Number of Products Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Closed__c</fullName>
        <formula>CASE(StageName, 
&quot;Closed Won&quot;, &quot;Closed&quot;,
&quot;Closed Lost&quot;,&quot;Closed&quot;,
&quot;Open&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open/Closed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Manager_Check_Fx__c</fullName>
        <formula>If( $User.Id = Owner.Salesforce_Manager__r.Id , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Manager Check Fx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opp_Owner_Active__c</fullName>
        <formula>Owner.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Owner Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opp_Owner_Manager__c</fullName>
        <formula>Owner.Salesforce_Manager__r.FirstName + &quot; &quot; + Owner.Salesforce_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Age__c</fullName>
        <formula>IF(IsClosed,( 
CloseDate - DATEVALUE(CreatedDate)), 
TODAY() - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_CaseSafe_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity CaseSafe Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, makes the opportunity read-only. This occurs when the opportunity is closed</description>
        <label>Opportunity Read-Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Referrer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6</booleanFilter>
            <errorMessage>Opportunity Referrer: Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Contact.Contact_UType__c</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <filterItems>
                <field>Contact.Contact_UType__c</field>
                <operation>equals</operation>
                <value>Sales Agent</value>
            </filterItems>
            <filterItems>
                <field>Contact.Contact_UType__c</field>
                <operation>equals</operation>
                <value>Partner Operator</value>
            </filterItems>
            <filterItems>
                <field>Contact.Contact_UType__c</field>
                <operation>equals</operation>
                <value>Amusement Operator</value>
            </filterItems>
            <filterItems>
                <field>Contact.Contact_UType__c</field>
                <operation>equals</operation>
                <value>Terminal Operator</value>
            </filterItems>
            <filterItems>
                <field>Contact.Contact_UType__c</field>
                <operation>equals</operation>
                <value>Acquisition</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Split_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commission Split 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Opportunity Split 1)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Split_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commission Split 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Opportunity Split 2)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Split_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commission Split 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Opportunity Split 3)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>